# gastroinfo-rust

./: Cargo.toml  Rocket.toml
src/: main.rs
templates/: index.html.hbs
