[package]
name = "web-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["handlebars"]

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["postgres_pool"]